https://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.2.M2
Date:
----------------------------------
Changes/New Features:

CAY-2338 Support comments in cgen and default templates
CAY-2656 Modeler: option to download required jars directly from maven central
CAY-2659 Use new SQLBuilder utility to generate SQL for batch queries
CAY-2662 Use custom interface for SQL tree processor instead of a Function<Node, Node>
CAY-2663 Support for custom SQL operators
CAY-2664 Add methods to EntityProperty to allow direct usage of primary key values
CAY-2665 Support for widespread SQL types that falls into Jdbc type OTHER
CAY-2668 Experimental graph-based db operations sorter
CAY-2670 CommitLog does not include FKs for deleted objects with one-way relationships
CAY-2673 Support ordering by aggregate functions
CAY-2674 Support in-memory evaluation of aggregate functions

Bug Fixes:

CAY-2591 Modeler: project becomes dirty after click on dbImport or cgen tab
CAY-2671 QualifierTranslator fails to translate expressions with compound PKs/FKs

----------------------------------
Release: 4.2.M1
Date: April 7, 2020
----------------------------------
Changes/New Features:

CAY-2465 New SelectTranslator implementation
CAY-2466 New internal API to build SQL
CAY-2467 New type-aware Property API
CAY-2468 Support subqueries in Expression API
CAY-2507 Property API to use path aliases
CAY-2508 Create api to add aliases in expressions
CAY-2510 Create builder to load custom modules into plugins and modeler
CAY-2511 Contribute custom properties for attributes
CAY-2512 Support for custom functions in Expression API and Property API
CAY-2514 Set SERVER_CONTEXTS_SYNC_PROPERTY default value to false
CAY-2517 EventManager: optimization of adding listeners
CAY-2518 Add method to append having qualifier expression to ObjectSelect